# HollowShell

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
HollowShell/: CMakeLists.txt  HollowShell.cpp
HollowShell/exec/: HollowBuiltins.cpp  HollowBuiltins.h  HollowEnvironment.cpp  HollowEnvironment.h  HollowExecutor.cpp  HollowExecutor.h  HollowJob.cpp  HollowJob.h
HollowShell/feature/: HollowPrompt.cpp  HollowPrompt.h
HollowShell/grammar/: HollowAST.h  HollowLexer.cpp  HollowLexer.h  HollowParser.cpp  HollowParser.h
HollowShell/utils/: HandlingExecute.h  IgnoreSignal.cpp  IgnoreSignal.h
